--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'cn.chuanwise'
@@ -25,8 +26,15 @@ dependencies {
 
     compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.11.2'
+
+    implementation 'org.bstats:bstats-bukkit:3.0.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+shadowJar {
+    archiveClassifier.set('')
+    relocate 'org.bstats', 'cn.chuanwise.networkwatchdog'
 }
