change version to `1.0`

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: NetworkWatchdog
-version: 1.0-SNAPSHOT
+version: 1.0
 author: Chuanwise
 main: cn.chuanwise.networkwatchdog.NetworkWatchdogPlugin
 softdepend:
